...
                    android:background="@drawable/combined_toggle_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <TextView
                        android:id="@+id/schoolToggleButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/school_toggle_background"
                        android:fontFamily="@font/archivo_medium"
                        android:gravity="center"
...
                        android:text="School"
                        android:textAllCaps="false"
                        android:textColor="@color/gray"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bothToggleButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/both_toggle_background"
                        android:fontFamily="@font/archivo_medium"
                        android:gravity="center"
...
                        android:text="Both"
                        android:textAllCaps="false"
                        android:textColor="@color/gray"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/houseToggleButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/house_toggle_background"
                        android:fontFamily="@font/archivo_medium"
                        android:gravity="center"
...
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <!-- Previous Arrow -->
                    <ImageView
                        android:id="@+id/previousMonth"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="Previous Month"
                        android:src="@drawable/ic_arrowleft" />

...
                        android:textColor="@color/black"
                        android:spinnerMode="dropdown" /> <!-- Removes Default Arrow -->


                    <!-- Next Arrow -->
                    <ImageView
                        android:id="@+id/nextMonth"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="16dp"
                        android:contentDescription="Next Month"
                        android:src="@drawable/ic_arrowright" />
                </LinearLayout>
...
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>
                </LinearLayout>
                <!-- Calendar Grid -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/calendarRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="7" /> <!-- Default 7 columns (Full Month) -->

...
