<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- Lottie Animation as Background -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/login_signup_animation"
        android:scaleType="fitXY" />

    <!-- White Card Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/whiteCard"
        android:layout_width="314dp"
        android:layout_height="550dp"
        android:background="#CCFFFFFF"
        app:cardCornerRadius="30dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/login_signup_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <!-- Inner ConstraintLayout for Positioning -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Toggle Button -->
            <LinearLayout
                android:id="@+id/toggleContainer"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="2dp"
                android:background="@drawable/toggle_button_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp">

                <!-- Login Button -->
                <TextView
                    android:id="@+id/loginButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_button_selected"
                    android:gravity="center"
                    android:text="Log In"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"
                    android:fontFamily="@font/archivo_medium"
                    android:textAllCaps="false"
                    android:tag="selected"
                    android:padding="8dp" />

                <!-- Sign Up Button -->
                <TextView
                    android:id="@+id/signupButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_button_unselected"
                    android:gravity="center"
                    android:text="Sign Up"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/archivo_medium"
                    android:textAllCaps="false"
                    android:padding="8dp" />
            </LinearLayout>

            <!-- Email Field -->
            <EditText
                android:id="@+id/emailInput"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/archivo_medium"
                android:hint="@string/email_or_username"
                android:textColorHint="@color/gray"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleContainer" />

            <!-- Password Field with Eye Icon -->
            <RelativeLayout
                android:id="@+id/password"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/emailInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:fontFamily="@font/archivo_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/gray"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:paddingStart="12dp"
                    android:paddingEnd="48dp" />

                <ImageView
                    android:id="@+id/passwordToggle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_eye_closed"
                    android:contentDescription="Toggle password visibility"
                    android:enabled="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:alpha="0.4" />
            </RelativeLayout>


            <!-- Forgot Password Link -->
            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/archivo_medium"
                android:text="Forgot Password?"
                android:textColor="@color/blue"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password" />

            <!-- Log In Button -->
            <Button
                android:id="@+id/loginSubmitButton"
                android:layout_width="261dp"
                android:layout_height="48dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/archivo_medium"
                android:text="Log In"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgotPassword" />

            <!-- Or Login With Text -->
            <TextView
                android:id="@+id/orLoginWithText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/archivo_medium"
                android:text="Or Log In with"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginSubmitButton" />

            <!-- Social Media Container -->
            <LinearLayout
                android:id="@+id/socialMediaContainer"
                android:layout_width="245dp"
                android:layout_height="71dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orLoginWithText">

                <!-- Facebook Icon -->
                <ImageView
                    android:id="@+id/facebookIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/circle_background_light_blue"
                    android:padding="14dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/facebook" />

                <!-- Google Icon -->
                <ImageView
                    android:id="@+id/googleIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/circle_background_light_blue"
                    android:padding="14dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/google" />

                <!-- Twitter Icon -->
                <ImageView
                    android:id="@+id/twitterIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/circle_background_light_blue"
                    android:padding="14dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/twitter_x" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
